@@ -198,10 +198,11 @@
 	AREA	CodeFill, CODE
 
 	ARM
-	DCI	0xFFEEDD11
+	DCD	0xFFEEDD11
 
 	THUMB
-	DCI	0xDDCC, 0xDD22
+	DCW	0xDD22
+	DCW	0xDDCC
 
 	]
 
